--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "mongodb-if",
   "version": "0.1.0",
   "description": "MongoDB Interface",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "prepublish": "npm run build",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +24,9 @@
   "homepage": "https://github.com/aThornes/mongodb-if#readme",
   "dependencies": {
     "mongodb": "^3.6.6"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.6.12",
+    "typescript": "^4.2.4"
   }
 }
