--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "mongodb-if",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "MongoDB Interface",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "prepublish": "npm run build",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx node test/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aThornes/mongodb-if.git"
+    "url": "https://github.com/aThornes/mongodb-if.git"
   },
   "keywords": [
     "MongoDB"
