--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "mongodb-if",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "MongoDB Interface",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "prepublish": "npm run build",
     "publish": "npm publish --access public",
@@ -20,7 +21,6 @@
     "db",
     "query"
   ],
-  "typings": "types.d.ts",
   "author": "Adam Thornes <adamthornes96@gmail.com>",
   "license": "MIT",
   "bugs": {
