--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "prepublish": "npm run build",
     "publish": "npm publish --access public",
-    "build": "tsc",
-    "test": "npx node test/index.js"
+    "build": "tsc --build",
+    "test": "jest",
+    "test-int": "npx node test/index.js"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,12 @@
   },
   "homepage": "https://github.com/aThornes/mongodb-if#readme",
   "dependencies": {
-    "mongodb": "^4.1.0"
+    "jest": "^29.2.2",
+    "mongodb": "^4.11.0",
+    "ts-jest": "^29.0.3"
   },
   "devDependencies": {
-    "@types/mongodb": "^3.6.12",
+    "@types/jest": "^27.5.1",
     "typescript": "^4.2.4"
   }
 }
