--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-if",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "MongoDB Interface",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -29,11 +29,11 @@
   },
   "homepage": "https://github.com/aThornes/mongodb-if#readme",
   "dependencies": {
-    "jest": "^29.2.2",
-    "mongodb": "^4.11.0",
-    "ts-jest": "^29.0.3"
+    "mongodb": "^4.11.0"
   },
   "devDependencies": {
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
     "@types/jest": "^27.5.1",
     "typescript": "^4.2.4"
   }
